Desplegando proyecto en gh-pages

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cards-memory",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://yamiquispe.github.io/cards-memory",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -19,7 +20,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --coverage --verbose",
     "eject": "react-scripts eject",
-    "eslint": "eslint --ext .js --ext .jsx src/"
+    "eslint": "eslint --ext .js --ext .jsx src/",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,6 +45,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.1"
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "gh-pages": "^2.2.0"
   }
 }
