Corrigiendo ruta en package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cards-memory",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://yamiquispe.github.io/cards-memory",
+  "homepage":"https://yamiquispe.github.io/cards-memory/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
