--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,12 +3,17 @@
   "name": "Memory Game",
   "icons": [
     {
+      "src": "favicon.ico",
+      "sizes": "16x16",
+      "type": "image/x-icon"
+    },
+    {
       "src": "./logo.png",
       "sizes": "500x500",
       "type": "image/png"
     }
   ],
-  "start_url": ".",
+  "start_url": "/gamecards",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
