--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
-    "gh-pages": "^2.2.0"
+    "gh-pages": "^2.2.0",
+    "history": "^4.10.1"
   }
 }
